--- a/hdx/build.xml
+++ b/hdx/build.xml
@@ -169,7 +169,7 @@
   <extclasspath id="installed.classpath">
 
     <!-- NDArray -->
-    <pathelement location="${star.jar.dir}/ndarray/ndarray.jar"/>
+    <pathelement location="${star.jar.dir}/array/array.jar"/>
     
     <!-- FITS -->
     <pathelement location="${star.jar.dir}/fits/fits.jar"/>
@@ -202,7 +202,7 @@
    !   classes/jars to the external classpath.  
    !-->
   <extclasspath id="built.jarpath">
-    <pathelement location="${star.build.dir}/ndarray/lib/ndarray/ndarray.jar"/>
+    <pathelement location="${star.build.dir}/array/lib/array/array.jar"/>
     <pathelement location="${star.build.dir}/fits/lib/fits/fits.jar"/>
     <pathelement location="${star.build.dir}/jnihds/lib/jnihds/jnihds.jar"/>
     <pathelement location="${star.build.dir}/jniast/lib/jniast/jniast.jar"/>
@@ -391,7 +391,7 @@
       <manifest>
         <attribute name="Built-By" value="${user.name}"/>
         <attribute name="Class-Path" 
-                   value="../ndarray/ndarray.jar ../fits/fits.jar
+                   value="../array/array.jar ../fits/fits.jar
 ../jnihds/jnihds.jar ../jniast/jniast.jar ../dom4j/dom4j-full.jar"/>
       </manifest>
     </jar>
