--- a/hdx/build.xml
+++ b/hdx/build.xml
@@ -65,6 +65,10 @@
    !   /star/java/source for full distribution) -->
   <property name="star.build.dir" value="${basedir}/../"/>
 
+  <!-- Directory that any archives should be placed into. The local
+   !   directort by default -->
+  <property name="star.archive.dir" value="${basedir}"/>
+
   <!--
    !  ================
    !  Local Properties
@@ -523,17 +527,19 @@
   <!--
    ! Create release archives of the various types required. Use this
    ! by an <antcall> and set the property "archive.name" to define what
-   ! name to use for the outfile files. If the property
-   ! "binary.required" is set then the files needed for a run-only
-   ! release are included and if "source.required" is defined the
-   ! source code is also included.
+   ! name to use for the outfile files. The archives are written into
+   ! the directory ${star.archive.dir} (the local directory by default).
+   !
+   ! If the property "binary.required" is set then the files needed
+   ! for a run-only release are included and if "source.required" is
+   ! defined the source code is also included.
    !-->
   <target name="create_archives"
           depends="dist">
 
-    <echoproperties/>
+    <mkdir dir="${star.archive.dir}"/>
 
-    <zip destfile="${archive.name}.zip">
+    <zip destfile="${star.archive.dir}/${archive.name}.zip">
 
       <!-- All releases have the documentation and build file -->
       <zipfileset dir="${dist.docs}" prefix="${name}/docs"/>
@@ -580,8 +586,10 @@
       </tarfileset>
     </tar>
 
-    <gzip zipfile="${archive.name}.tar.gz" src="${archive.name}.tar"/>
-    <bzip2 zipfile="${archive.name}.tar.bz2" src="${archive.name}.tar"/>
+    <gzip zipfile="${star.archive.dir}/${archive.name}.tar.gz" 
+          src="${archive.name}.tar"/>
+    <bzip2 zipfile="${star.archive.dir}/${archive.name}.tar.bz2" 
+           src="${archive.name}.tar"/>
     <delete file="${archive.name}.tar"/>
 
   </target>
