Changed 'dist&build' systems so that jar files and javadocs are created in the dist system, rather than the build one and then copied later.

--- a/splat/build.xml
+++ b/splat/build.xml
@@ -84,7 +84,7 @@
   <property name="version" value="1.1"/>
 
   <!-- The Java package name -->
-  <property name="package.name" value="uk.ac.starlink.sog"/>
+  <property name="package.name" value="uk.ac.starlink.splat"/>
 
   <!-- Compilation options -->
   <property name="debug" value="true"/>
