--- a/dom4j/build.xml
+++ b/dom4j/build.xml
@@ -320,6 +320,9 @@
     <listdelete>
       <filelist dir="/" files="${files}"/>
     </listdelete>
+
+    <delete file="${install.log}"/>
+
   </target>
 
   <!--
