Now removes installation log after deinstall.

--- a/jetty/build.xml
+++ b/jetty/build.xml
@@ -143,9 +143,9 @@
   </target>
 
   <!--
-   !   =======================
-   !   Create the HDX jar file
-   !   =======================
+   !   ===========================
+   !   Create the package jar file
+   !   ===========================
    !
    !  Nothing to do.
    !-->
@@ -334,6 +334,9 @@
     <listdelete>
       <filelist dir="/" files="${files}"/>
     </listdelete>
+
+    <delete file="${install.log}"/>
+
   </target>
 
   <!--
