--- a/jniast/build.xml
+++ b/jniast/build.xml
@@ -334,6 +334,9 @@
     <listdelete>
       <filelist dir="/" files="${files}"/>
     </listdelete>
+
+    <delete file="${install.log}"/>
+
   </target>
 
   <!--
