--- a/jsky/build.xml
+++ b/jsky/build.xml
@@ -128,9 +128,9 @@
   </target>
 
   <!--
-   !   =======================
-   !   Create the HDX jar file
-   !   =======================
+   !   ===========================
+   !   Create the package jar file
+   !   ===========================
    !
    !  Nothing to do.
    !-->
@@ -331,6 +331,9 @@
     <listdelete>
       <filelist dir="/" files="${files}"/>
     </listdelete>
+
+    <delete file="${install.log}"/>
+  
   </target>
 
   <!--
